Update TabbarVC - Adjust tabbar height for iphone 8 (but not for iphone 11 - need work on this)

--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Base.lproj/MainTab.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Base.lproj/MainTab.storyboard
@@ -11,10 +11,15 @@
             <objects>
                 <tabBarController restorationIdentifier="TabbarVC" storyboardIdentifier="TabbarVC" automaticallyAdjustsScrollViewInsets="NO" id="fB6-hD-4QB" customClass="TabbarVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="y2x-Ec-4Bp">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="y2x-Ec-4Bp" customClass="TabbarView" customModule="TutorDot_iOS" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="height">
+                                <real key="value" value="65"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </tabBar>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6v5-Xg-MMF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
