--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/AlertTableViewCell.xib
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Nibs/AlertTableViewCell.xib
@@ -27,7 +27,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogt-uk-mwj">
-                                <rect key="frame" x="52" y="20" width="35.5" height="17"/>
+                                <rect key="frame" x="52" y="20" width="196" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -54,6 +54,7 @@
                             <constraint firstItem="Mmh-Za-V0E" firstAttribute="leading" secondItem="Hhj-uN-adi" secondAttribute="trailing" constant="13" id="Cw6-Zh-1c0"/>
                             <constraint firstItem="Hhj-uN-adi" firstAttribute="centerY" secondItem="a69-Iz-YQD" secondAttribute="centerY" id="GsP-5p-LqY"/>
                             <constraint firstItem="cDY-gl-O6e" firstAttribute="centerY" secondItem="ogt-uk-mwj" secondAttribute="centerY" id="WkP-TU-qSv"/>
+                            <constraint firstItem="cDY-gl-O6e" firstAttribute="leading" secondItem="ogt-uk-mwj" secondAttribute="trailing" constant="5" id="avq-5R-Y8G"/>
                             <constraint firstItem="ogt-uk-mwj" firstAttribute="top" secondItem="a69-Iz-YQD" secondAttribute="top" constant="20" id="qfL-GB-GxE"/>
                             <constraint firstItem="ogt-uk-mwj" firstAttribute="leading" secondItem="Hhj-uN-adi" secondAttribute="trailing" constant="13" id="x8h-D9-hXG"/>
                         </constraints>
@@ -73,6 +74,7 @@
                 <outlet property="newNoticeImage" destination="cDY-gl-O6e" id="Zhb-eV-rPs"/>
                 <outlet property="noticeDetail" destination="Mmh-Za-V0E" id="4no-aT-DpX"/>
                 <outlet property="noticeTitle" destination="ogt-uk-mwj" id="R9A-XN-FxF"/>
+                <outlet property="topLabelConstraint" destination="qfL-GB-GxE" id="ucF-Qt-5kX"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="115.84821428571428"/>
         </tableViewCell>
